Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-10-26 Gal
 BUG: [ 1418805 ] Menu colors incorrect with non-standard color scheme
  Src/: BCMenu.cpp

2006-10-24 Tim
 PATCH: [ 1584004 ] Delete "Toolbar.bmp"
  Src/res deleted file: Toolbar.bmp

2006-10-20 Kimmo
 Fix compile warnings (some of them 64-bit), remove unused variables and code, fix types
  Src: MainFrm.cpp
 Remove unused function, fix inproper pointer usage
  Src: FileFilterHelper.cpp
 Fix casting a pointer type to DWORD (not 64-bit compatible)
  Src: DirView.cpp DirView.h

2006-10-19 Kimmo
 PATCH: [ 1578419 ] Fix creating WinMerge folder to MyFolders always
  Src: MainFrm.cpp MainFrm.h
 Trivial type fixes, coding style fixes and converting comments to doxygen
  Src: StdAfx.cpp StdAfx.h
 Fix misuse of reference parameters (compiler warning)
  Src: DirView.cpp

2006-10-11 Kimmo
 PATCH: [ 1574696 ] Fix problem in saving filefilter to project file
  Src: ProjectFilePathsDlg.cpp

2006-10-10 Takashi
 BUG: [ 1573240 ] Crash in subversion trunk
  Src: MainFrm.cpp MainFrm.h OptionsInit.cpp

2006-10-09 Takashi
 BUG: [ 1570259 ] Bookmarks GUI get reset after save
  Src/editlib: ccrystaltextview.cpp

2006-10-08 Takashi
 BUG: [ 1570173 ] Crash when merging all differences
  Src: MergeDoc.cpp

2006-10-08 Kimmo
 PATCH: [ 1555344 ] Separate active/inactive developers in Contributors.txt
  Docs/Users: Contributors.txt

2006-10-07 Tim
 PATCH: [ 1572359 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-10-04 Tim
 PATCH: [ 1570241 ] Various Updates in German Translation for WinMerge 2.6
  Src/Languages/German: MergeGerman.rc

2006-10-02 Gal
 BUG: [ 1566783 ] Crash on Save Project when no file is selected
  Src: MainFrm.cpp

2006-10-01 Kimmo
 PATCH: [ 1567874 ] Change manual URL to point to 2.6 manual
  Src: MainFrm.cpp

2006-09-27 Takashi
 BUG: [ 1564572 ] Leak memory on undoing