@@ -119,9 +119,8 @@ extern CMergeApp theApp;
 
 /////////////////////////////////////////////////////////////////////////////
 CMergeDoc *GetDoc();
-BOOL SelectFile(CString& path, LPCTSTR root_path = NULL, 
-			 LPCTSTR title = _T("Open"), 
-			 UINT filterid =0,
+BOOL SelectFile(HWND parent, CString& path, LPCTSTR root_path = NULL, 
+			 LPCTSTR title = _T("Open"), UINT filterid = 0,
 			 BOOL is_open =TRUE);
 
 BOOL SelectFolder(CString& path, LPCTSTR root_path = NULL, 
